Figures updated for bioRxiv submission

--- a/DataAnalysisNotebooks/SyntheticRippleAnalysis.ipynb
+++ b/DataAnalysisNotebooks/SyntheticRippleAnalysis.ipynb
@@ -1061,10 +1061,10 @@
    },
    "outputs": [],
    "source": [
-    "def generate_SWR_new(PeakLevel=6, FS=3000, FRipple=200, nStdDevs=4, PhaseOffset=0, length=0.1):\n",
+    "def generate_SWR_new(PeakLevel=6, FS=3000, FRipple=200, nStdDevs=4, PhaseOffset=0):\n",
     "    \"\"\"\n",
-    "        Virtually identical to original but length is specified as a variable here and set to 0.1s \n",
-    "        which is average length of ripple bounds down to mean.\n",
+    "        Virtually identical to original but length of ripple event is 133ms specified by\n",
+    "        window size. This enables coming back down to the mean on either side at ~100ms\n",
     "    \"\"\"\n",
     "    winSize = round(400)\n",
     "    t = np.arange(-winSize, winSize+1) / FS\n",
