updates after revisions

--- a/DataAnalysisNotebooks/MultichannelAnalysis.ipynb
+++ b/DataAnalysisNotebooks/MultichannelAnalysis.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shayok/anaconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/shayok/anaconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/shayok/anaconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/shayok/anaconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "#imports\n",
     "import numpy as np\n",
@@ -56,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -196,49 +209,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shayok/anaconda3/lib/python3.5/site-packages/scipy/signal/signaltools.py:1336: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "/home/shayok/anaconda3/lib/python3.5/site-packages/scipy/signal/_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "/home/shayok/anaconda3/lib/python3.5/site-packages/scipy/signal/signaltools.py:1333: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "/home/shayok/anaconda3/lib/python3.5/site-packages/scipy/signal/signaltools.py:1342: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Only run first time for data generation! This takes a while otherwise\n",
-    "# smoothed_envelope3, rippleData3 = ripple_filtering.rippleBandFilterSimulated(dataT3, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
+    "# Only run first time for data generation! This takes a while otherwise\n",
+    "smoothed_envelope2, rippleData2 = ripple_filtering.rippleBandFilterSimulated(dataT2, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
+    "smoothed_envelope3, rippleData3 = ripple_filtering.rippleBandFilterSimulated(dataT3, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
+    "\n",
     "# smoothed_envelope4, rippleData4 = ripple_filtering.rippleBandFilterSimulated(dataT4, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
-    "# np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT3.out\",smoothed_envelope3,fmt='%10.5f')\n",
+    "\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT3.out\",smoothed_envelope3,fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT2.out\",smoothed_envelope2,fmt='%10.5f')\n",
+    "\n",
     "# np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT4.out\",smoothed_envelope4,fmt='%10.5f')\n",
+    "\n",
     "# smoothed_envelope2 = np.loadtxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelopeT2.out\")\n",
-    "# smoothed_envelope3, rippleData3 = ripple_filtering.rippleBandFilter(dataT3, timeStampsSeconds, FS=FS)\n",
+    "smoothed_envelope2, rippleData2 = ripple_filtering.rippleBandFilter(dataT2, timeStampsSeconds, FS=FS)\n",
+    "smoothed_envelope3, rippleData3 = ripple_filtering.rippleBandFilter(dataT3, timeStampsSeconds, FS=FS)\n",
+    "\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelopeT3.out\",smoothed_envelope3,fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelopeT3.out\",smoothed_envelope2,fmt='%10.5f')\n",
+    "\n",
     "# smoothed_envelope4, rippleData4 = ripple_filtering.rippleBandFilter(dataT4, timeStampsSeconds, FS=FS)\n",
-    "# np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelopeT3.out\",smoothed_envelope3,fmt='%10.5f')\n",
     "# np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelopeT4.out\",smoothed_envelope4,fmt='%10.5f')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "np.savez_compressed(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT2.npz\",smoothed_envelopeT2=smoothed_envelopeT2)\n",
-    "np.savez_compressed(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT3.npz\",smoothed_envelopeT3=smoothed_envelopeT3)\n",
-    "np.savez_compressed(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT4.npz\",smoothed_envelopeT4=smoothed_envelopeT4)"
+    "smoothed_envelope3, rippleData3 = ripple_filtering.rippleBandFilterSimulated(dataT3, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT3.out\",smoothed_envelope3,fmt='%10.5f')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "smoothed_envelope2, rippleData2 = ripple_filtering.rippleBandFilterSimulated(dataT2, timeStampsSeconds, FS,ripple_filtering.bandpassFilterTaps,ripple_filtering.lowpassFilterTaps)\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/smoothed_envelope_simulatedT2.out\",smoothed_envelope2,fmt='%10.5f')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savez_compressed(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT2.npz\",smoothed_envelopeT2=smoothed_envelope2)\n",
+    "np.savez_compressed(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT3.npz\",smoothed_envelopeT3=smoothed_envelope3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "smoothed_envelopeT2 = np.load(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT2.npz\")['smoothed_envelopeT2']\n",
     "smoothed_envelopeT3 = np.load(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT3.npz\")['smoothed_envelopeT3']\n",
-    "smoothed_envelopeT4 = np.load(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT4.npz\")['smoothed_envelopeT4']"
+    "# smoothed_envelopeT4 = np.load(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/figureData/Figure6/smoothed_envelopeT4.npz\")['smoothed_envelopeT4']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -246,16 +305,14 @@
    "source": [
     "#set threshold, find threshold crossings, and find ripple bounds\n",
     "SecondaryThresholdSigma = 0\n",
-    "thresholdSigma = 3\n",
+    "thresholdSigma = 5\n",
     "lengthCriteria = 0.015 #15 ms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 77,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Tetrode 2\n",
@@ -292,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -332,80 +389,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartT2.out\",rippleBoundsT2[:,0],fmt='%10.5f')\n",
-    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndT2.out\",rippleBoundsT2[:,1],fmt='%10.5f')\n",
-    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartT3.out\",rippleBoundsT3[:,0],fmt='%10.5f')\n",
-    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndT3.out\",rippleBoundsT3[:,1],fmt='%10.5f')"
+    "def merge_ripple_epochs(epocha, epochb, ):\n",
+    "        \"\"\"Finds intersection (overlap) between two sets of epoch arrays.\n",
+    "        Sampling rates can be different.\n",
+    "\n",
+    "        TODO: verify if this requires a merged EpochArray to work properly?\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        epoch : nelpy.EpochArray\n",
+    "        boundaries : bool\n",
+    "            If True, limits start, stop to epoch start and stop.\n",
+    "        meta : dict, optional\n",
+    "            New dictionary of meta data for epoch ontersection.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        intersect_epochs : nelpy.EpochArray\n",
+    "        \"\"\"\n",
+    "\n",
+    "        new_starts = []\n",
+    "        new_stops = []\n",
+    "        epoch_a = epocha.copy().merge()\n",
+    "        epoch_b = epochb.copy().merge()\n",
+    "\n",
+    "        for aa in epoch_a.time:\n",
+    "            for bb in epoch_b.time:\n",
+    "                if (aa[0] <= bb[0] < aa[1]) and (aa[0] < bb[1] <= aa[1]): # b starts after a and is shorter\n",
+    "                    new_starts.append(aa[0])\n",
+    "                    new_stops.append(aa[1])\n",
+    "                elif (aa[0] < bb[0] < aa[1]) and (aa[0] < bb[1] > aa[1]): # b starts after a and is longer\n",
+    "                    new_starts.append(aa[0])\n",
+    "                    new_stops.append(bb[1])\n",
+    "                elif (aa[0] > bb[0] < aa[1]) and (aa[0] < bb[1] < aa[1]): # b starts before a and a is longer\n",
+    "                    new_starts.append(bb[0])\n",
+    "                    new_stops.append(aa[1])\n",
+    "                elif (aa[0] >= bb[0] < aa[1]) and (aa[0] < bb[1] >= aa[1]): # b starts same time or before a and b is longer or same time as a\n",
+    "                    new_starts.append(bb[0])\n",
+    "                    new_stops.append(bb[1])\n",
+    "\n",
+    "        epoch_a._time = np.hstack(\n",
+    "            [np.array(new_starts)[..., np.newaxis],\n",
+    "                np.array(new_stops)[..., np.newaxis]])\n",
+    "\n",
+    "        return epoch_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#merge t2 and t3 detections for canonical ripple\n",
-    "#merge t2 and t3 detections for canonical ripple\n",
-    "#ripples are defined as intersection with two channels. start is the earliest start time out of the two channnels\n",
-    "#end is the latter end of the two channels. This should give a conservative detection latency estimate while\n",
-    "#encapsulating the entire ripple event across channels\n",
-    "rippleBounds = []\n",
-    "for i in range(0, rippleMaxesT2.size):\n",
-    "    moo = np.squeeze(np.where(offlineRippleDetectionsT3[rippleBoundsT2[i][0]:rippleBoundsT2[i][1]] > 0))\n",
-    "    if(moo.size > 0):\n",
-    "        if(offlineRippleDetectionsT3[rippleBoundsT2[i][0]] > 0):\n",
-    "            rippleBounds.append([rippleBoundsT2[i][0], rippleBoundsT2[i][1]])\n",
-    "        else:\n",
-    "            if(moo.size == 1): \n",
-    "                index = np.squeeze(np.where(moo+rippleBoundsT2[i][0] == rippleBoundsT3[:,0]))\n",
-    "                rippleBounds.append([rippleBoundsT3[index][0],rippleBoundsT3[index][1]])\n",
-    "            else:\n",
-    "                index = np.squeeze(np.where(moo[0]+rippleBoundsT2[i][0] == rippleBoundsT3[:,0]))\n",
-    "                rippleBounds.append([rippleBoundsT3[index][0],rippleBoundsT3[index][1]])\n",
-    "\n",
-    "rippleBounds = np.asarray(rippleBounds)\n",
-    "\n",
-    "#Merge union of ripple detections\n",
-    "offlineRippleDetections = np.zeros(smoothed_envelopeT3.size)\n",
-    "for i in range(0, rippleBounds.shape[0]):\n",
-    "    offlineRippleDetections[(rippleBounds[i][0]):(rippleBounds[i][1])] = rippleMaxesT2[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 61741,  62979],\n",
-       "       [ 76214,  76842],\n",
-       "       [ 93610,  94898],\n",
-       "       [102885, 103749],\n",
-       "       [105662, 106174],\n",
-       "       [110621, 110955],\n",
-       "       [111693, 111937],\n",
-       "       [112006, 112493],\n",
-       "       [112712, 112886],\n",
-       "       [125374, 126217]])"
+       "<EpochArray at 0x7efc14f71e10: 492 epochs> of duration 3 days 11:21:53 hours"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rippleBounds[0:10]"
+    "rippleBounds = merge_ripple_epochs(nel.EpochArray(rippleBoundsT2),nel.EpochArray(rippleBoundsT3))\n",
+    "rippleBounds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# save appropriately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartTwoChan5SD.out\",rippleBounds.starts,fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndTwoChan5SD.out\",rippleBounds.stops,fmt='%10.5f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartT25SD.out\",rippleBoundsT2[:,0],fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndT25SD.out\",rippleBoundsT2[:,1],fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartT35SD.out\",rippleBoundsT3[:,0],fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndT35SD.out\",rippleBoundsT3[:,1],fmt='%10.5f')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsStartTwoChan3SD.out\",rippleBounds[:,0],fmt='%10.5f')\n",
+    "np.savetxt(\"/home/shayok/Documents/Code/RippleDetectionAnalysis/Cavaradossi/paperData/twoChanAnalysis/rippleBoundsEndTwoChan3SD.out\",rippleBounds[:,1],fmt='%10.5f')"
    ]
   },
   {
